--- a/DAW.Repositories/DAW.Repositories.csproj
+++ b/DAW.Repositories/DAW.Repositories.csproj
@@ -16,4 +16,8 @@
 		</AssemblyAttribute>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="LazyCache.AspNetCore" Version="2.4.0" />
+	</ItemGroup>
+
 </Project>
