--- a/DAW.TracksService/appsettings.json
+++ b/DAW.TracksService/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Cache": {
+    "TTL": "00:00:30"
+  }
 }
