--- a/DAW.SPA/tracks/package.json
+++ b/DAW.SPA/tracks/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "rxjs": "~7.5.0",
+    "tone": "^14.7.77",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
